// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component tests Checkbox all props 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="All Props Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  accessible={true}
  defaultChecked={true}
  disabled={true}
  focusable={false}
  labelPosition="before"
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderColor": undefined,
      "borderRadius": 4,
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 8,
    }
  }
>
  <Text
    style={
      Object {
        "borderColor": "transparent",
        "borderStyle": "solid",
        "color": "#a19f9d",
        "fontFamily": "Segoe UI",
        "fontSize": 14,
        "fontWeight": "400",
        "margin": 0,
        "marginTop": -1,
      }
    }
  >
    All Props Checkbox
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#f3f2f1",
        "borderRadius": 2,
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginEnd": 0,
        "marginLeft": undefined,
        "minHeight": 16,
        "minWidth": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={8}
      bbWidth={11}
      color={-4342339}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "color": "#bdbdbd",
            "height": 8,
            "left": 1,
            "opacity": 1,
            "top": 3,
            "width": 11,
          },
          Object {
            "flex": 0,
            "height": 8,
            "width": 11,
          },
        ]
      }
      tintColor={-4342339}
      vbHeight={8}
      vbWidth={11}
    >
      <RNSVGGroup
        opacity={1}
      >
        <RNSVGPath
          d="M10.2637 1.26367L4 7.5332L0.736328 4.26367L1.26367 3.73633L4 6.4668L9.73633 0.736328L10.2637 1.26367Z"
          fill={
            Array [
              2,
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Checkbox component tests Checkbox all tokens 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="All Tokens Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  accessible={true}
  defaultChecked={false}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "purple",
      "borderColor": undefined,
      "borderRadius": 4,
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "blue",
        "borderColor": "red",
        "borderRadius": 2,
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginEnd": 10,
        "marginLeft": undefined,
        "minHeight": 16,
        "minWidth": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={8}
      bbWidth={11}
      color={-16181}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "color": "pink",
            "height": 8,
            "left": 1,
            "opacity": 0.7,
            "top": 3,
            "width": 11,
          },
          Object {
            "flex": 0,
            "height": 8,
            "width": 11,
          },
        ]
      }
      tintColor={-16181}
      vbHeight={8}
      vbWidth={11}
    >
      <RNSVGGroup
        opacity={0.7}
      >
        <RNSVGPath
          d="M10.2637 1.26367L4 7.5332L0.736328 4.26367L1.26367 3.73633L4 6.4668L9.73633 0.736328L10.2637 1.26367Z"
          fill={
            Array [
              2,
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    style={
      Object {
        "borderColor": "green",
        "borderStyle": "solid",
        "color": "yellow",
        "fontFamily": "Wingdings",
        "fontSize": 20,
        "fontWeight": "900",
        "margin": 0,
        "marginTop": -1,
      }
    }
  >
    All Tokens Checkbox
  </Text>
</View>
`;

exports[`Checkbox component tests Checkbox default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Checkbox"
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  accessible={true}
  defaultChecked={false}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderColor": undefined,
      "borderRadius": 4,
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#323130",
        "borderRadius": 2,
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginEnd": 4,
        "marginLeft": undefined,
        "minHeight": 16,
        "minWidth": 16,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={8}
      bbWidth={11}
      color={-14672098}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "color": "#201f1e",
            "height": 8,
            "left": 1,
            "opacity": 0,
            "top": 3,
            "width": 11,
          },
          Object {
            "flex": 0,
            "height": 8,
            "width": 11,
          },
        ]
      }
      tintColor={-14672098}
      vbHeight={8}
      vbWidth={11}
    >
      <RNSVGGroup
        opacity={0}
      >
        <RNSVGPath
          d="M10.2637 1.26367L4 7.5332L0.736328 4.26367L1.26367 3.73633L4 6.4668L9.73633 0.736328L10.2637 1.26367Z"
          fill={
            Array [
              2,
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    style={
      Object {
        "borderColor": "transparent",
        "borderStyle": "solid",
        "color": "#323130",
        "fontFamily": "Segoe UI",
        "fontSize": 14,
        "fontWeight": "400",
        "margin": 0,
        "marginTop": -1,
      }
    }
  >
    Default Checkbox
  </Text>
</View>
`;
